ddp-workspace/projects/ddp-testboston/src/style/activity.scss
@import '../app-theme.scss';

// common activity styles
.section-spinner {
    display: flex;
    align-items: center;
    flex: 1;
    justify-content: center;
}

.static-spinner {
    padding-bottom: 8rem;
}

.main_activity {
    padding-bottom: 8rem;
    box-sizing: border-box;
    font-family: 'PT Serif', sans-serif;
}

.PageContent-subtitle {
    margin: 1rem 0;
}

// consent header
.header-section {
    margin: 0 0 2rem 0;
    background-color: mat-color($app-theme, 3400);
}

.activity-header {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    font-family: 'Nunito', sans-serif;
    margin: 4rem 0;
    color: mat-color($app-theme, 100);

    &__icon {
        height: 1.25rem;
        margin-right: 0.5rem;
    }

    &__text {
        display: inline-flex;
        padding-top: 1rem;
        font-weight: 400;
        font-size: 1.375rem;
        line-height: 2.0625rem;

        &_column {
            flex-direction: column;
        }
    }

    &__warn {
        margin-top: 1rem;
        font-weight: 700;
    }
}

@media only screen and (max-width: 520px) {
    .activity-header {
        flex-direction: column;
        align-items: flex-start;

        .button {
            margin-top: 1rem;
        }
    }
}

// buttons layout
.activity-buttons {
    display: flex;
    justify-content: space-between;
    margin: 4rem 0 0 0;
    font-family: 'Nunito', sans-serif;

    .button {
        font-family: inherit;
        display: flex;
        align-items: center;

        &_right {
            margin-left: auto;
        }
    }
}

@media only screen and (max-width: 560px) {
    .activity-buttons_mobile {
        flex-direction: column;
        align-items: center;

        .button {
            width: 20rem;
        }

        .button:not(:last-child) {
            margin-bottom: 1.5rem;
        }
    }
}

// info box
.infobox {
    border: 2px solid mat-color($app-theme, 1200);
    border-radius: 8px;
    background-color: rgba(113, 84, 255, 0.06);
    padding: 1rem;
    margin: 2rem 0;
}


// error message
.ErrorMessage {
    font-size: 1.25rem;
    line-height: 1.875rem;
    margin: 1rem 0;
    color: mat-color($app-theme, 2700);
    font-family: 'Nunito', sans-serif;
    font-weight: 500;
}

// close button
.ddp-close-button {
    transition: 0.3s;

    &:hover {
        color: rgba(0, 0, 0, 0.26);
    }
}

.ddp-question-prompt {
    display: inherit;
}

// steps
.activity-steps {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 1rem 3rem;
    font-family: 'Nunito', sans-serif;

    &__divider {
        flex: 1;
        border-top: 3px solid mat-color($app-theme, 3500);
        margin: 20px 0 0 0;
    }
}

.activity-step {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 58px;
    cursor: default;

    &__number {
        display: flex;
        align-items: center;
        justify-content: center;
        width: 40px;
        height: 40px;
        background-color: mat-color($app-theme, 3500);
        border-radius: 20px;
        font-size: 20px;
        line-height: 38px;
    }

    &__text {
        white-space: nowrap;
        font-size: 18px;
        line-height: 38px;
    }
}

.activity-step.completed {
    cursor: pointer;

    .activity-step {
        &__number {
            color: white;
            background-color: mat-color($app-theme, 1300);
        }

        &__text {
            color: mat-color($app-theme, 1300);
        }
    }
}

.activity-step.active.completed {
    cursor: default;

    .activity-step {
        &__number {
            color: white;
            background-color: mat-color($app-theme, 1200);
        }

        &__text {
            color: mat-color($app-theme, 1200) !important;
        }
    }
}

@media only screen and (max-width: 620px) {
    .activity-steps {
        padding: 1rem 0;
    }

    .activity-step {
        &__text {
            display: none;
        }
    }
}

// subject
.subject {
    display: flex;

    &__block:first-child {
        margin-right: 3rem;
    }
}

// questions
.ddp-activity-question {

    mat-checkbox,
    mat-radio-button {
        color: mat-color($app-theme, 700) !important;
    }

    .mat-radio-label {
        align-items: normal !important;
    }

    .mat-radio-container {
        margin-top: 0.1875rem;
    }
}

ddp-activity-boolean-answer {
    .example-radio-group {
        display: flex;
        flex-direction: column;

        mat-radio-button {
            margin: 5px 30px 5px 0px !important;
        }
    }
}

.ddp-question-prompt {
    font-family: 'Nunito', sans-serif;
    font-weight: 700;
    margin-bottom: 0.5rem;
    margin-top: 2rem;
}

.ddp-list {
    font-family: 'Nunito', sans-serif;
    font-weight: 700;

    mat-radio-group {
        font-weight: 400;
    }
}

.mat-checkbox-label,
.mat-radio-label-content {
    font-size: 1.25rem !important;
    line-height: 1.875rem !important;
    color: mat-color($app-theme, 700);
}

.mat-list-item-content {
    padding-left: 5px !important;
}

.ddp-picklist-option-list-item {
    height: auto !important;
    margin-bottom: 1rem;
}

.mat-checkbox-inner-container {
    height: 19px !important;
    width: 19px !important;
    margin-top: 5px !important;
}

.date-field {
    .mat-form-field-label {
        font-size: 18px !important;
        font-weight: 700 !important;
        color: mat-color($app-theme, 700) !important;
    }
}

.picklist {
    margin-top: 1rem;
}

// native dropdown
.native-select {
    select {
        font-size: 1.375rem;
        color: mat-color($app-theme, 900);
        background-color: rgba(255, 255, 255, 0.9);
        width: 100%;
        padding: 0;
        margin-top: 1rem;
        border: none;
        border-bottom: 1px solid rgba(0, 0, 0, .42);
        border-radius: 0;
        height: 2.65rem;
        transition: all .3s;
        font-family: inherit;
        cursor: pointer;
    }

    select:disabled {
        color: rgba(0, 0, 0, 0.38);
        border-bottom: 1px dashed rgba(0, 0, 0, 0.38);
        cursor: auto;
    }
}

.ddp-answer-container {
    .native-select {
        margin-right: 2rem;
    }

    .native-select:last-child {
        margin-right: 0;
    }
}

@media only screen and (max-width:670px) {
    .ddp-answer-container {
        display: flex;
        flex-direction: column;

        .native-select {
            margin: 1rem 0 0 0;
            width: 17rem;
        }
    }
}

// static content
.static-header,
.static-text {
    font-family: 'Nunito', sans-serif;
    font-size: 1.375rem;
    line-height: 2.0625rem;
}

.static-header {
    margin-bottom: 0;
}

.static-text {
    color: mat-color($app-theme, 3600);
    margin-top: 0;
}

// last updated text
.last-updated {
    display: flex;
    margin: 3rem 0;
}

// required question
.ddp-required-question-prompt:after {
    content: ' *';
}

// picklist characters counter 
.ddp-helper {
    font-size: 1.1rem;
    margin: -1rem 0 0 0;
}

.ddp-counter-color {
    color: mat-color($app-theme, 1700);
}

// date time composite question, BASELINE_SYMPTOM and LONGITUDINAL_COVID activities
.composite-answer- {

    &SAMPLE_COLLECT_TIME,
    &LONGITUDINAL_SAMPLE_COLLECT_TIME {
        .ddp-answer-field {
            display: flex;
            align-items: center;
        }
    }
}

.numeric-answer- {

    &SAMPLE_COLLECT_TIME_MIN,
    &SAMPLE_COLLECT_TIME_HOUR,
    &LONGITUDINAL_SAMPLE_COLLECT_TIME_HOUR,
    &LONGITUDINAL_SAMPLE_COLLECT_TIME_MIN {
        .input-field {
            width: 6rem !important;
            padding-right: 2rem !important;
        }
    }
}

.picklist-answer- {

    &SAMPLE_COLLECT_TIME_AM_PM,
    &LONGITUDINAL_SAMPLE_COLLECT_TIME_AM_PM {
        .ddp-radio-group-column {
            flex-direction: row !important;
        }
    }
}

@media only screen and (max-width:378px) {
    .composite-answer- {

        &SAMPLE_COLLECT_TIME,
        &LONGITUDINAL_SAMPLE_COLLECT_TIME {
            .ddp-answer-container {
                flex-direction: column !important;
            }
        }
    }
}

// household members question, BASELINE_COVID activity
.numeric-answer-HOUSEHOLD_MEMBER_AGE {
    display: flex;
    width: 13rem;
    margin-top: 0.5rem;
}

